--- a/site/style.css
+++ b/site/style.css
@@ -1,11 +1,12 @@
 *{
 	box-sizing: border-box;
-
+	
+  
 }
 
 body{
-	margin: 0;
-	padding:0;
+   margin: 10px;
+   padding: 10px;
 
 }
 #subh1{
@@ -26,24 +27,25 @@ h1{
 
 h2{
 
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 2px 50px 2px 50px;
     font-family: arial,helvetica;
     float: right;
     border: 1px solid black;
     color: #ffff00;
     clear: left;
     margin-bottom: 30px;
+    
 }
 
 section{
-	border: 1px solid black;
-	margin-right: 10px;
-	margin-left: 10px; 
+	border: 1px solid black; 
 	background-color: #90ff90;
     margin-bottom: 10px;
     overflow: auto;
-    padding: 0px 0px 50px 0px;
+    padding: 0px 0px 50px 0px; 
+   
+    
 }
 
 p{
@@ -67,7 +69,7 @@ p{
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7,
 	 .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12
 	 {
-	    float: left; 
+	    float: left;       
 
 	 }
 	 .col-lg-1{
@@ -98,6 +100,7 @@ p{
 	 	width: 74.99%;
 	 }
 	 .col-lg-10{
+	 	width: 83.33%;
 	 }
 	 .col-lg-11{
 	 	width: 91.66%;
@@ -141,6 +144,7 @@ p{
 	 	width: 74.99%;
 	 }
 	 .col-md-10{
+	 	width: 83.33%;
 	 }
 	 .col-md-11{
 	 	width: 91.66%;
