--- a/site/style.css
+++ b/site/style.css
@@ -40,12 +40,10 @@ h2{
 
 section{
 	border: 1px solid black; 
-	background-color: #90ff90;
+	background-color: #293916;
     margin-bottom: 10px;
-    overflow: auto;
     padding: 0px 0px 50px 0px; 
-   
-    
+     
 }
 
 p{
