--- a/site/style.css
+++ b/site/style.css
@@ -7,6 +7,7 @@
 body{
    margin: 10px;
    padding: 10px;
+   background-color: #FF4500;
 
 }
 #subh1{
@@ -40,7 +41,7 @@ h2{
 
 section{
 	border: 1px solid black; 
-	background-color: #293916;
+	background-color: #90EE90;
     margin-bottom: 10px;
     padding: 0px 0px 50px 0px; 
      
